--- a/exmaples/metamask-example/package.json
+++ b/exmaples/metamask-example/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/node": "^12.20.15",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "babel-jest": "^26.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "@types/node": "^16.11.22",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "typescript": "^4.5.5",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.3.4",
     "rango-sdk": "^0.0.1",
     "@ethersproject/providers": "^5.4.0",
     "ethers": "^5.4.0"
