--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rango-sdk",
-  "version": "0.0.4",
-  "description": "Rango Exchange SDK for dApps",
+  "name": "rango-sdk-basic",
+  "version": "0.0.1",
+  "description": "Rango Exchange Basic SDK for dApps",
   "main": "lib/index.js",
   "types": "lib",
   "repository": {
