--- a/examples/metamask-example/package.json
+++ b/examples/metamask-example/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.4",
-    "rango-sdk-basic": "file:./../../",
+    "rango-sdk-basic": "^0.0.1",
     "@ethersproject/providers": "^5.4.0",
     "ethers": "^5.4.0"
   },
