--- a/examples/keepkey-example/package.json
+++ b/examples/keepkey-example/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@pioneer-platform/pioneer-client": "^8.1.24",
+    "@pioneer-platform/pioneer-coins": "^8.1.42",
     "@shapeshiftoss/hdwallet-core": "1.16.11",
     "@shapeshiftoss/hdwallet-keepkey-webusb": "1.16.11",
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "babel-jest": "^26.6.0",
+    "coinselect": "^3.1.12",
     "dotenv": "^16.0.1",
     "rango-sdk": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "web3-utils": "^1.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
