migrate sdk active branches to yarn workspace

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,5 @@
     "ecmaVersion": 13,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
-  "rules": { "no-unused-vars": "error" }
+  "plugins": ["@typescript-eslint"]
 }
