--- a/package.json
+++ b/package.json
@@ -1,35 +1,13 @@
 {
-  "name": "rango-sdk",
-  "version": "0.0.8",
-  "description": "Rango Exchange SDK for dApps",
-  "main": "lib/index.js",
-  "types": "lib",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rango-exchange/rango-sdk.git"
-  },
-  "homepage": "https://github.com/rango-exchange/rango-sdk",
-  "bugs": {
-    "url": "https://github.com/rango-exchange/rango-sdk/issues"
-  },
+  "private": true,
+  "sideEffects": false,
+  "workspaces": ["packages/*"],
   "scripts": {
-    "test": "jest --config jestconfig.json",
-    "build": "tsc",
-    "lint": "eslint */**/*.{js,ts} --quiet --fix",
-    "semantic-release": "semantic-release",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "build": "yarn workspaces run build",
+    "clean": "yarn workspaces run clean",
+    "format": "yarn workspaces run format",
+    "lint": "yarn workspaces run lint"
   },
-  "keywords": [
-    "Rango Exchange",
-    "SDK",
-    "Cross-Chain",
-    "Multi-Chain"
-  ],
-  "files": [
-    "lib/**/*"
-  ],
-  "author": "rango.exchange",
-  "license": "GPL-3.0",
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "@types/uuid": "^8.3.4",
@@ -44,16 +22,5 @@
     "semantic-release": "^19.0.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.4"
-  },
-  "dependencies": {
-    "axios": "^0.24.0",
-    "bignumber.js": "^9.0.2",
-    "uuid": "^8.3.2"
-  },
-  "publishConfig": {
-    "access": "public",
-    "branches": [
-      "master"
-    ]
   }
 }
