fix bundle problem

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "rango-sdk-basic",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "description": "Rango Exchange Basic SDK for dApps",
-  "main": "lib/index.js",
-  "types": "lib",
+  "module": "dist/rango-sdk-basic.esm.js",
+  "main": "dist/index.js",
+  "types": "dist",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rango-exchange/rango-sdk.git"
@@ -26,7 +27,7 @@
     "Multi-Chain"
   ],
   "files": [
-    "lib/**/*"
+    "dist/**/*"
   ],
   "author": "rango.exchange",
   "license": "GPL-3.0",
@@ -43,15 +44,16 @@
     "prettier": "^2.5.1",
     "semantic-release": "^19.0.2",
     "ts-jest": "^27.1.3",
-    "typescript": "^4.5.4"
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "axios": "^0.24.0",
     "bignumber.js": "^9.0.2",
     "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.7.2",
-    "uuid": "^8.3.2",
-    "rango-types": "^0.1.0"
+    "rango-types": "^0.1.0",
+    "uuid": "^8.3.2"
   },
   "publishConfig": {
     "access": "public",
