--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "url": "https://github.com/rango-exchange/rango-sdk/issues"
   },
   "scripts": {
-    "test": "jest --config jestconfig.json",
-    "build": "tsc",
+    "build": "tsdx build --tsconfig ./tsconfig.json",
+    "watch": "tsdx watch",
     "format": "prettier --write ./src",
     "lint": "eslint */**/*.{js,ts} --quiet --fix",
     "semantic-release": "semantic-release"
@@ -32,28 +32,25 @@
   "author": "rango.exchange",
   "license": "GPL-3.0",
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/uuid": "^8.3.4",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.4.7",
-    "prettier": "^2.5.1",
-    "semantic-release": "^19.0.2",
-    "ts-jest": "^27.1.3",
-    "ts-loader": "^9.4.2",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.3",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "bignumber.js": "^9.0.2",
+    "@types/node": "^18.11.18",
+    "axios": "^1.2.6",
+    "bignumber.js": "^9.1.1",
     "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.7.2",
     "rango-types": "^0.1.0",
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.0"
   },
   "publishConfig": {
     "access": "public",
