--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "rango-sdk",
   "version": "0.0.10",
   "description": "Rango Exchange SDK for dApps",
+  "module": "lib/rango-sdk-basic.esm.js",
   "main": "lib/index.js",
-  "types": "lib",
+  "types": "lib/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rango-exchange/rango-sdk.git"
@@ -13,11 +14,12 @@
     "url": "https://github.com/rango-exchange/rango-sdk/issues"
   },
   "scripts": {
-    "test": "jest --config jestconfig.json",
-    "build": "tsc",
+    "build": "tsdx build --tsconfig ./tsconfig.json && yarn mv:file lib",
+    "watch": "tsdx watch",
+    "format": "prettier --write ./src",
     "lint": "eslint */**/*.{js,ts} --quiet --fix",
     "semantic-release": "semantic-release",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "mv:file": "sh ./scripts/post-build.sh"
   },
   "keywords": [
     "Rango Exchange",
@@ -30,26 +32,24 @@
   ],
   "author": "rango.exchange",
   "license": "GPL-3.0",
-  "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/uuid": "^8.3.4",
+  "devDependencies": {    
+    "@rollup/plugin-replace": "^5.0.2",
+    "@types/uuid": "^9.0.0",
+    "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.4.7",
-    "prettier": "^2.5.1",
-    "semantic-release": "^19.0.2",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.5.4"
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.3",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "bignumber.js": "^9.0.2",
-    "rango-types": "^0.1.0",
-    "uuid": "^8.3.2"
+    "axios": "^1.2.6",
+    "bignumber.js": "^9.1.1",
+    "rango-types": "^0.1.1",
+    "uuid": "^9.0.0"
   },
   "publishConfig": {
     "access": "public",
