--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rango-sdk",
   "version": "0.0.10",
   "description": "Rango Exchange SDK for dApps",
-  "module": "lib/rango-sdk-basic.esm.js",
+  "module": "lib/rango-sdk.esm.js",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "repository": {
