updating with latest version of packages

--- a/packages/rango-sdk-basic/tsconfig.json
+++ b/packages/rango-sdk-basic/tsconfig.json
@@ -7,10 +7,6 @@
     "outDir": "lib",
     "rootDir": "./src"
   },
-  "include": ["./src/**/*", "./src/**/*.json"],
-  "references": [
-    {
-      "path": "../common/tsconfig.json"
-    }
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "**/__tests__/*"]
 }
