--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
   "private": true,
   "sideEffects": false,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "yarn workspaces run build",
     "clean": "yarn workspaces run clean",
+    "dev": "yarn workspaces run watch",
     "format": "yarn workspaces run format",
     "lint": "yarn workspaces run lint"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/uuid": "^8.3.4",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@types/uuid": "^9.0.0",
+    "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.4.7",
-    "prettier": "^2.5.1",
-    "semantic-release": "^19.0.2",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.5.4"
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.3",
+    "typescript": "^4.9.4",
+    "fs-extra": "^11.1.0"
   }
 }
