--- a/packages/rango-sdk-basic/package.json
+++ b/packages/rango-sdk-basic/package.json
@@ -1,24 +1,26 @@
 {
   "name": "rango-sdk-basic",
-  "version": "0.0.8",
+  "version": "0.0.15",
   "description": "Rango Exchange Basic SDK for dApps",
+  "module": "lib/rango-sdk-basic.esm.js",
   "main": "lib/index.js",
-  "types": "lib",
+  "types": "lib/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rango-exchange/rango-sdk.git"
   },
-  "homepage": "https://github.com/rango-exchange/rango-sdk",
+  "homepage": "https://github.com/rango-exchange/rango-sdk/tree/basic-api",
   "bugs": {
     "url": "https://github.com/rango-exchange/rango-sdk/issues"
   },
-  "scripts": {
-    "clean": "tsc --build --clean && rm -rf ./lib",
-    "test": "jest --config jestconfig.json",
-    "build": "tsc --build --clean && tsc --build && tsc --build tsconfig.cjs.json && yarn post:build",
-    "post:build": "node ../../scripts/frankBuild.js",
+  "scripts": {    
+    "clean": "rm -rf ./lib",
+    "build": "tsdx build --tsconfig ./tsconfig.json && yarn post:build",
+    "post:build": "yarn mv:file lib && node ../../scripts/frankBuild.js",
+    "watch": "tsdx watch",
+    "lint": "eslint */**/*.{js,ts} -c ../../.eslintrc.json --fix --ignore-path ../../.prettierignore",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ../../.prettierrc.json --ignore-path ../../.prettierignore",
-    "lint": "eslint */**/*.{js,ts} -c ../../.eslintrc.json --fix --ignore-path ../../.prettierignore"
+    "mv:file": "sh ../../scripts/post-build.sh"
   },
   "keywords": [
     "Rango Exchange",
@@ -31,8 +33,26 @@
   ],
   "author": "rango.exchange",
   "license": "GPL-3.0",
+  "devDependencies": {
+    "@rollup/plugin-replace": "^5.0.2",
+    "@types/uuid": "^9.0.0",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.3",
+    "typescript": "^4.9.4"
+  },
   "dependencies": {
-    "uuid": "^8.3.2"
+    "axios": "^1.2.6",
+    "bignumber.js": "^9.1.1",
+    "eth-rpc-errors": "^4.0.3",
+    "ethers": "^5.7.2",
+    "rango-types": "^0.1.1",
+    "uuid": "^9.0.0"
   },
   "publishConfig": {
     "access": "public",
