--- a/packages/rango-sdk-basic/package.json
+++ b/packages/rango-sdk-basic/package.json
@@ -9,16 +9,16 @@
     "type": "git",
     "url": "git+https://github.com/rango-exchange/rango-sdk.git"
   },
-  "homepage": "https://github.com/rango-exchange/rango-sdk/tree/basic-api",
+  "homepage": "https://github.com/rango-exchange/rango-sdk",
   "bugs": {
     "url": "https://github.com/rango-exchange/rango-sdk/issues"
   },
-  "scripts": {    
+  "scripts": {
     "clean": "rm -rf ./lib",
     "build": "tsdx build --tsconfig ./tsconfig.json && yarn post:build",
     "post:build": "yarn mv:file lib && node ../../scripts/frankBuild.js",
     "watch": "tsdx watch",
-    "lint": "eslint */**/*.{js,ts} -c ../../.eslintrc.json --fix --ignore-path ../../.prettierignore",
+    "lint": "eslint src -c ../../.eslintrc.json --fix --ignore-path ../../.prettierignore",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ../../.prettierrc.json --ignore-path ../../.prettierignore",
     "mv:file": "sh ../../scripts/post-build.sh"
   },
@@ -33,19 +33,6 @@
   ],
   "author": "rango.exchange",
   "license": "GPL-3.0",
-  "devDependencies": {
-    "@rollup/plugin-replace": "^5.0.2",
-    "@types/uuid": "^9.0.0",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.3",
-    "typescript": "^4.9.4"
-  },
   "dependencies": {
     "axios": "^1.2.6",
     "bignumber.js": "^9.1.1",
