--- a/packages/rango-sdk/package.json
+++ b/packages/rango-sdk/package.json
@@ -18,7 +18,7 @@
     "build": "tsdx build --tsconfig ./tsconfig.json && yarn post:build",
     "post:build": "yarn mv:file lib && node ../../scripts/frankBuild.js",
     "watch": "tsdx watch",
-    "lint": "eslint */**/*.{js,ts} -c ../../.eslintrc.json --fix --ignore-path ../../.prettierignore",
+    "lint": "eslint src -c ../../.eslintrc.json --fix --ignore-path ../../.prettierignore",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ../../.prettierrc.json --ignore-path ../../.prettierignore",
     "mv:file": "sh ../../scripts/post-build.sh"
   },
