--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.2",
-    "@types/uuid": "^9.0.0",
     "@types/node": "^18.11.18",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
+    "fs-extra": "^11.1.0",
     "prettier": "^2.8.3",
-    "typescript": "^4.9.4",
-    "fs-extra": "^11.1.0"
-  }
+    "typescript": "^4.9.4"
+  },
+  "dependencies": {}
 }
