--- a/packages/rango-sdk/package.json
+++ b/packages/rango-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rango-sdk",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Rango Exchange SDK for dApps",
   "module": "lib/rango-sdk.esm.js",
   "main": "lib/index.js",
@@ -14,9 +14,9 @@
     "url": "https://github.com/rango-exchange/rango-sdk/issues"
   },
   "scripts": {
-    "clean": "rm -rf ./lib",
+    "clean": "rm -rf ./lib && rm -rf ./dist",
     "build": "tsdx build --tsconfig ./tsconfig.json && yarn post:build",
-    "post:build": "yarn mv:file lib && node ../../scripts/frank-build.js",
+    "post:build": "yarn mv:file lib",
     "watch": "tsdx watch",
     "lint": "eslint src -c ../../.eslintrc.json --fix --ignore-path ../../.prettierignore",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ../../.prettierrc.json --ignore-path ../../.prettierignore",
@@ -42,7 +42,7 @@
   "dependencies": {
     "axios": "^1.2.6",
     "bignumber.js": "^9.1.1",
-    "rango-types": "^0.1.2",
+    "rango-types": "^0.1.3",
     "uuid": "^9.0.0"
   },
   "publishConfig": {
