--- a/packages/rango-sdk-basic/package.json
+++ b/packages/rango-sdk-basic/package.json
@@ -45,7 +45,7 @@
     "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.7.2",
     "rango-types": "^0.1.12",
-    "uuid": "^9.0.0"
+    "uuid-random": "^1.3.2"
   },
   "publishConfig": {
     "access": "public",
