--- a/packages/rango-sdk/package.json
+++ b/packages/rango-sdk/package.json
@@ -43,7 +43,7 @@
     "axios": "^1.2.6",
     "bignumber.js": "^9.1.1",
     "rango-types": "^0.1.12",
-    "uuid": "^9.0.0"
+    "uuid-random": "^1.3.2"
   },
   "publishConfig": {
     "access": "public",
