--- a/examples/basic/metamask-example/package.json
+++ b/examples/basic/metamask-example/package.json
@@ -5,7 +5,7 @@
   "source": "public/index.html",
   "dependencies": {
     "@ethersproject/providers": "^5.4.0",
-    "@rangodev/ui": "0.1.10-next.61",
+    "@rango-dev/ui": "^0.1.10-next.69",
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
