--- a/examples/basic/metamask-example/package.json
+++ b/examples/basic/metamask-example/package.json
@@ -2,40 +2,37 @@
   "name": "rango-metamask-example",
   "version": "0.1.0",
   "private": true,
+  "source": "public/index.html",
   "dependencies": {
+    "@ethersproject/providers": "^5.4.0",
+    "@rango-dev/ui": "^0.1.10-next.70",
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
-    "babel-jest": "^26.6.0",
+    "parcel": "^2.8.3",
+    "rango-sdk-basic": "^0.1.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.4",
-    "rango-sdk-basic": "^0.1.10",
-    "@ethersproject/providers": "^5.4.0",
     "ethers": "^5.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "dev": "parcel serve -p 3000",
+    "build": "parcel build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "devDependencies": {
+    "assert": "^2.0.0",
+    "buffer": "^5.5.0",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.1.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
   }
 }
