--- a/packages/rango-sdk-basic/package.json
+++ b/packages/rango-sdk-basic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rango-sdk-basic",
-  "version": "0.1.23",
+  "version": "0.1.24",
   "description": "Rango Exchange Basic SDK for dApps",
   "module": "lib/rango-sdk-basic.esm.js",
   "main": "lib/index.js",
@@ -35,7 +35,8 @@
     "Aggregator"
   ],
   "files": [
-    "lib/**/*"
+    "lib/**/*",
+    "src"
   ],
   "author": "rango.exchange",
   "license": "GPL-3.0",
@@ -44,7 +45,7 @@
     "bignumber.js": "^9.1.1",
     "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.7.2",
-    "rango-types": "^0.1.28",
+    "rango-types": "^0.1.29",
     "uuid-random": "^1.3.2"
   },
   "publishConfig": {
