--- a/packages/rango-sdk/package.json
+++ b/packages/rango-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rango-sdk",
-  "version": "0.1.23",
+  "version": "0.1.24",
   "description": "Rango Exchange SDK for dApps",
   "module": "lib/rango-sdk.esm.js",
   "main": "lib/index.js",
@@ -35,14 +35,15 @@
     "Aggregator"
   ],
   "files": [
-    "lib/**/*"
+    "lib/**/*",
+    "src"
   ],
   "author": "rango.exchange",
   "license": "GPL-3.0",
   "dependencies": {
     "axios": "^1.2.6",
     "bignumber.js": "^9.1.1",
-    "rango-types": "^0.1.28",
+    "rango-types": "^0.1.29",
     "uuid-random": "^1.3.2"
   },
   "publishConfig": {
