--- a/packages/rango-sdk/package.json
+++ b/packages/rango-sdk/package.json
@@ -32,6 +32,7 @@
     "Solana",
     "Tron",
     "Starknet",
+    "Ton",
     "Aggregator"
   ],
   "files": [
@@ -43,7 +44,7 @@
   "dependencies": {
     "axios": "^1.2.6",
     "bignumber.js": "^9.1.1",
-    "rango-types": "^0.1.38",
+    "rango-types": "^0.1.40",
     "uuid-random": "^1.3.2"
   },
   "publishConfig": {
