--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "fs-extra": "^11.1.0",
     "prettier": "^2.8.3",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "tsdx": "^0.14.1"
   },
   "dependencies": {}
 }
