--- a/examples/multi/metamask-example/package.json
+++ b/examples/multi/metamask-example/package.json
@@ -2,20 +2,39 @@
   "name": "metamask-multistep",
   "version": "0.1.0",
   "private": true,
+  "source": "public/index.html",
   "dependencies": {
+    "@ethersproject/providers": "^5.4.0",
+    "@rango-dev/signer-evm": "^0.8.0",
+    "@rango-dev/ui": "^0.1.10-next.70",
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "babel-jest": "^26.6.0",
+    "copy-to-clipboard": "^3.3.3",
+    "ethers": "^5.4.0",
+    "parcel": "^2.8.3",
+    "rango-sdk": "^0.1.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "typescript": "^4.3.4",
-    "rango-sdk": "^0.0.9",
-    "@ethersproject/providers": "^5.4.0",
-    "ethers": "^5.4.0"
+    "typescript": "^4.3.4"
+  },
+  "devDependencies": {
+    "assert": "^2.0.0",
+    "buffer": "^5.5.0",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.1.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
   },
   "scripts": {
+    "dev": "parcel serve -p 3000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
