--- a/examples/multi/metamask-example/tsconfig.json
+++ b/examples/multi/metamask-example/tsconfig.json
@@ -14,7 +14,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "strictPropertyInitialization": false,
+    "jsx": "react"
   },
   "include": ["src"]
 }
