--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   publish-packages:
+    if: "!contains(github.event.head_commit.message, 'publish workflow')"
+
     name: Publish Packages
     runs-on: ubuntu-latest
 
@@ -14,6 +16,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          ref: master
+          token: ${{ secrets.PAT }}
 
       - name: Setup NodeJS
         uses: actions/setup-node@v3
@@ -57,7 +61,7 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git commit -a -m "Bump package versions"
+          git commit -am "ci: bump package versions [publish workflow]"
           git push origin master
 
       - name: Publish packages
