--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,9 @@ on:
 
 jobs:
   publish-packages:
-    if: "!contains(github.event.head_commit.message, 'ci(release):')"
+    if: |
+      !contains(github.event.head_commit.message , 'ci(release)')
+        && !contains(github.event.head_commit.message , 'sdk-example')
 
     name: Publish Packages
     runs-on: ubuntu-latest
