--- a/examples/basic/evm-example/package.json
+++ b/examples/basic/evm-example/package.json
@@ -6,15 +6,16 @@
   "dependencies": {
     "@ethersproject/providers": "^5.4.0",
     "@rango-dev/ui": "^0.1.10-next.70",
-    "@types/node": "^12.20.15",
+    "@types/node": "^18.11.18",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "ethers": "^5.4.0",
     "parcel": "^2.8.3",
-    "rango-sdk-basic": "^0.1.16",
+    "rango-sdk-basic": "^0.1.39",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "copy-to-clipboard": "^3.3.3"
   },
   "scripts": {
     "dev": "parcel serve -p 3000",
