--- a/examples/basic/evm-example/package.json
+++ b/examples/basic/evm-example/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "ethers": "^5.4.0",
     "copy-to-clipboard": "^3.3.3",
     "parcel": "^2.8.3",
     "rango-sdk-basic": "^0.1.39",
