--- a/examples/basic/evm-example/package.json
+++ b/examples/basic/evm-example/package.json
@@ -4,18 +4,24 @@
   "private": true,
   "source": "public/index.html",
   "dependencies": {
-    "@ethersproject/providers": "^5.4.0",
+    "@rango-dev/provider-keplr": "^0.29.0",
+    "@rango-dev/provider-metamask": "^0.29.0",
+    "@rango-dev/provider-phantom": "^0.29.0",
+    "@rango-dev/provider-tron-link": "0.29.1-next.1",
+    "@rango-dev/provider-xdefi": "^0.29.0",
     "@rango-dev/ui": "^0.1.10-next.70",
+    "@rango-dev/wallets-react": "^0.12.0",
+    "@rango-dev/wallets-shared": "^0.29.0",
     "@types/node": "^18.11.18",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "copy-to-clipboard": "^3.3.3",
     "ethers": "^5.4.0",
     "parcel": "^2.8.3",
-    "rango-sdk-basic": "^0.1.39",
+    "rango-sdk-basic": "^0.1.47",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.3.4",
-    "copy-to-clipboard": "^3.3.3"
+    "typescript": "^4.3.4"
   },
   "scripts": {
     "dev": "parcel serve -p 3000",
