--- a/examples/basic/node-solana/package.json
+++ b/examples/basic/node-solana/package.json
@@ -6,7 +6,9 @@
   },
   "type": "module",
   "dependencies": {
-    "ethers": "^6.13.2",
+    "@rango-dev/signer-solana": "^0.31.0",
+    "@solana/web3.js": "^1.91.4",
+    "bs58": "^6.0.0",
     "rango-sdk-basic": "^0.1.54"
   },
   "devDependencies": {
