--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ jobs:
   publish-packages:
     if: |
       !contains(github.event.head_commit.message , 'ci(release)')
-        && !contains(github.event.head_commit.message , 'sdk-example')
+        && !contains(github.event.head_commit.message , 'example')
 
     name: Publish Packages
     runs-on: ubuntu-latest
